force-app/main/default/objects/Appointment__c/Appointment__c.object-meta.xml
<CustomObject>

    <description>Custom object for tracking sales and service appointments</description>




    <label>Appointment</label>
    <nameField>
        <label>Appointment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Appointments</pluralLabel>

    <sharingModel>ControlledByParent</sharingModel>

    <sharingModel>ReadWrite</sharingModel>

</CustomObject>