force-app/main/default/objects/Appointment__c/recordTypes/Sales_Appointment.recordType-meta.xml
<RecordType>
    <fullName>Sales_Appointment</fullName>
    <active>true</active>
    <label>Sales Appointment</label>
</RecordType>